--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 <div class="question-container">
   <p class="faq question-1">What is Frontend Mentor, and how will it help me?</p>
-  <img src="assets/images/icon-plus.svg" class="expand" id="answer-1"></div>
+  <button><img src="assets/images/icon-plus.svg" class="expand" id="answer-1"></button></div>
 
   <p id="accordion-answer-1" class="answer">Frontend Mentor offers realistic coding challenges to help developers improve their 
   frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
@@ -28,21 +28,21 @@
 
   <div class="question-container">
   <p class="faq question-2">Is Frontend Mentor free?</p>
-  <img src="assets/images/icon-plus.svg" class="expand" id="answer-2"></div>
+  <button><img src="assets/images/icon-plus.svg" class="expand" id="answer-2"></button></div>
 
   <p id="accordion-answer-2" class="answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
   option providing access to a range of projects suitable for all skill levels.</p>
 
   <div class="question-container">
   <p class="faq question-3">Can I use Frontend Mentor projects in my portfolio?</p>
-  <img src="assets/images/icon-plus.svg" class="expand" id="answer-3"></div>
+  <button><img src="assets/images/icon-plus.svg" class="expand" id="answer-3"></button></div>
 
   <p id="accordion-answer-3" class="answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
   way to showcase your skills to potential employers!</p>
 
   <div class="question-container no-border">
   <p class="faq question-4">How can I get help if I'm stuck on a Frontend Mentor challenge?</p>
-  <img src="assets/images/icon-plus.svg" class="expand" id="answer-4"></div>
+  <button><img src="assets/images/icon-plus.svg" class="expand" id="answer-4"></button></div>
 
   <p id="accordion-answer-4" class="answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help 
   channel where you can ask questions and seek support from other community members.</p>
